# timeseries-frontend

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  UI_flow.md  design_decisions.md  docker-compose.yml  gunicorn.conf.py  manage.py  openapi.json  pipeline.md  pipeline_wizard.html  pyproject.toml  requirements.txt  sample.json  smoketest.sh  updated_openapi.json
.github/workflows/: cicd.yml  prompts
api_mock/: api_mock.py
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  security_settings.py
static/css/: style.css
static/favicon/: site.webmanifest
static/images/: wave_small_text.xcf
static/js/: loading-qa.js  main.js  results.js
stub.github/workflows/: cicd.yml
templates/: base.html  robots.txt
templates/timeseries/: about.html  analysis.html  analysis_full.html  analysis_htmx.html  analysis_simple.html  analysis_test.html  api_response_popup.html  debug_results.html  index.html  jsonpaths.txt  results.html  results_test.html
templates/timeseries/fragments/: spillover.html  spillover_analysis.html
timeseries/: __init__.py  admin.py  api_client.py  apps.py  context_processors.py  models.py  plotting_utils.py  results_processor.py  sitemap.py  tests.py  urls.py  views.py
timeseries/templatetags/: dict_extras.py
timeseries/views/: pipeline_proxy.py
utilities/: __init__.py  chronicler.py
